# tecweb

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  README_eng.md  TODO  account.txt  admin.txt  docker-compose.yml  pyproject.toml
core/: db.sqlite3
core/account/: forms.py  froms.py  models.py  tests.py  urls.py  views.py
core/account/migrations/: 0001_initial.py  0002_alter_userbase_managers_alter_userbase_cap_code_and_more.py  0003_userbase_is_seller.py  0004_remove_userbase_is_seller.py  0005_userbase_is_seller.py  0006_remove_userbase_about.py  0007_alter_userbase_is_active.py
core/basket/: views.py
core/cart/: cart.py  tests.py  urls.py  views.py
core/core/: production_settings.py  settings.py  tests.py  urls.py  wsgi.py
core/htmlcov/: d_48e9d7ebb482c3cc_0001_initial_py.html  d_48e9d7ebb482c3cc___init___py.html  d_57760688d1f824db___init___py.html  d_57760688d1f824db_settings_py.html  d_57760688d1f824db_urls_py.html  d_5cc1c4a2ff182d0d___init___py.html  d_5cc1c4a2ff182d0d_admin_py.html  d_5cc1c4a2ff182d0d_apps_py.html  d_5cc1c4a2ff182d0d_models_py.html  d_5cc1c4a2ff182d0d_tests_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_testModels_py.html  index.html  manage_py.html  status.json
core/orders/: models.py  tests.py  urls.py  views.py
core/orders/migrations/: 0001_initial.py  0002_remove_order_updated.py  0003_remove_order_billing_status.py  (+1 more)
core/payment/: urls.py  views.py
core/store/: admin.py  forms.py  models.py  testModels.py  testViews.py  tests.py  urls.py  views.py
core/tests/: testModels.py  testViews.py
(+36 files in other folders)
