[tool.poetry]
name = "tecweb"
version = "0.1.0"
description = "University project with django"
authors = ["Gattopandacorno <gazzotti.caterina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-braces = "^1.15.0"
Django = "^4.2"
django-crispy-forms = "^1.14.0"
Pillow = "^10.2.0"
coverage = "^6.4.2"
django-countries = "^7.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
